# enigma-chess

./: CMakeLists.txt  README.md  editsREADME.md  makefile
include/: board.h  mini_max.h  randomMoves.h
site/: button.js  enigma-chess.html  enigma-chess.js  enigma-chess.wasm  enigma-chess.wast  index.html  index.js  makeMoveWASM.js
src/: board.cc  engine.cc  main.cc  mini_max.cc  randomMoves.cc  wasmF.cc
